--- a/index.public.html
+++ b/index.public.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>MyVkHandles</title>
+        <title>MyVkHandlesWall</title>
     </head>
     <body>
         <script src="node_modules/microevent-github/microevent.js"></script>
